--- a/03-SECTION/0309-EJ/index.html
+++ b/03-SECTION/0309-EJ/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-   <section>
+    <section id="columns-inline-block">
         <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus rerum deserunt libero cupiditate,
             pariatur ipsam recusandae quod optio ducimus odio reprehenderit at ad, beatae tempore cum! Laborum repellat
             doloribus dicta, nesciunt, ipsam, possimus quis quasi minima repellendus quod provident! Nobis repellendus
@@ -28,7 +28,7 @@
             quidem blanditiis odit, tempore modi quam excepturi, veniam placeat dolore enim ea quibusdam quo
             repudiandae, hic ipsam corporis omnis distinctio accusamus. Deleniti laborum earum asperiores provident
             optio porro a eligendi. Enim perspiciatis beatae veniam consequuntur!</article>
-    </colums-inline-block>
+        </section>
 
 </body>
 
